- Sort excerpts by title. [Rotonen]
- Task forms: Drop unnecessary distinction between single/multi org unit setups. [lgraf]
- Add the document UUID to the OC document payloads. [Rotonen]
- Fix styling of dossier manager field, when a group is selected.[phgross]
- Update fontawesome to version 5.2. [Kevin Bieri]
- Add missing icon in Activity settings. [njohner]
- Revoke local roles for responsible and agency when finishing a task. [phgross]
- Allow administrators to export the repository as excel file. [njohner]
- Document generated meeting documents. [tarnap]
- Hide create proposal action on inboxes document listing tab. [phgross]
- Add RoleAssignment manager layer including a new sharing form. [phgross]
- Fix teamraum styles import / export for right logo. [tarnap]
- Bump ftw.upgrade for deferrable upgrade support. [deiferni]
- Create initial version with the original document creator as the principal. [lgraf]
- Improve usability of proposal add form. [elioschmutz]
- Add role assignments management view. [phgross]
- Add REST API endpoint for creating bumblebee sessions. [buchi]
- Bump ftw.casauth to 1.2.0 which provides a `@caslogin` endpoint. [buchi]
- Customize `@navigation` endpoint to return repository tree. [buchi]
- Make lock info visible even when a document can be safely unlocked. [njohner]
- Make `@config` endpoint accessible for anonymous on every context. [buchi]
- Return root and CAS URL in `@config` endpoint. [buchi]
- Improve form for submitting and updating additional documents. [tarnap]
- Fix Styling of TabbedView buttons in dossier document listing. [njohner]
- Bump ftw.tokenauth to 1.1.0 which provides support for impersonation. [buchi]
- Adjust table styling for small screens for the activity-settings view. [elioschmutz]
- Update german translation for "committeee responsible" used within the activity settings tab. [elioschmutz]
- Make sure selecting at least one task template is required. [phgross]
- Add meeting templates. [tarnap]