@@ -14,6 +14,7 @@ Changelog
 - Fix styling of dossier manager field, when a group is selected.[phgross]
 - Update fontawesome to version 5.2. [Kevin Bieri]
 - Add missing icon in Activity settings. [njohner]
+- Resolve interactive users already on the select-responsibles step. [phgross]
 - Revoke local roles for responsible and agency when finishing a task. [phgross]
 - Allow administrators to export the repository as excel file. [njohner]
 - Document generated meeting documents. [tarnap]
